<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xlarge_vertical_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textVersion"
        style="@style/text_about"
        android:layout_marginTop="@dimen/xlarge_vertical_margin"
        android:text="@string/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textPolicy"
        style="@style/text_about"
        android:text="@string/link_privacy"
        app:layout_constraintEnd_toEndOf="@+id/textVersion"
        app:layout_constraintStart_toStartOf="@+id/textVersion"
        app:layout_constraintTop_toBottomOf="@+id/textVersion" />

    <TextView
        android:id="@+id/textTerms"
        style="@style/text_about"
        android:text="@string/link_terms"
        app:layout_constraintEnd_toEndOf="@+id/textVersion"
        app:layout_constraintStart_toStartOf="@+id/textVersion"
        app:layout_constraintTop_toBottomOf="@+id/textPolicy" />

</androidx.constraintlayout.widget.ConstraintLayout>